change path to service worker

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <script>
         addEventListener("load", async () => {
-            let serviceWorker = await navigator.serviceWorker.register("sw.js");
+            let serviceWorker = await navigator.serviceWorker.register("./sw.js");
             console.log(serviceWorker);
         });
 
